This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2003-02-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/AbortAppender.hh, src/AbortAppender.cpp: added
	missing layout methods.
	* src/PropertyConfiguratorImpl.cpp: added AbortAppender.
	
2003-01-06 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/RemoteSyslogAppender.cpp: fixed handling of large messages and
	buffer deallocation in _append() as reported by Benety Goh.
	
2002-11-29 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* log4cpp.spec.in: install HTML documentation in
	/var/www/html/manual/log4cpp.
	
2002-11-28 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/threading/PThreads.hh:
	Fix Mutex copy bug (#645270) as suggested by Robert Ballarin.
	
2002-11-20 Aaron Ingram <ai8@yahoo.com>
	* Priority.hh: added LOG4CPP_EXPORT to export Priority class from the 
        DLL (Win32 only)

2002-11-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.in: corrected library version.
	
2002-11-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/AbortAppender.hh, src/AbortAppender.cpp: added.
	
2002-10-29 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.4b
	
	* include/log4cp/config-win32.h, src/PortabilityImpl.hh: added 
	workarounds for abs() and strftime() and localtime() not being
	defined in std:: on MSVC6. See bug report #630334.
	
2002-10-28 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.4.
	
	* tests/testPattern.cpp: added missing 'std::'.

	* src/StringUtil.hh, src/StringUtil.cpp: fixed signed-vs-unsigned
	comparison warning. Let both trim() implementations return
	unsigned int.
	
2002-10-27 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/OstringStream.hh, src/OstringStream.cpp: removed
	* src/StringUtil.hh, src/StringUtil.cpp: added vform() method.
	* PortabilityImpl.cpp: added. 
